--- a/apps/demo-angular/src/plugin-demos/fingerprint-auth.component.html
+++ b/apps/demo-angular/src/plugin-demos/fingerprint-auth.component.html
@@ -2,10 +2,12 @@
 <StackLayout class="p-20">
 	<ScrollView class="h-full">
 		<StackLayout>
-      <Label [text]="demoShared.status" class="t-20 text-center c-black" textWrap="true"></Label>
+			<Label [text]="demoShared.status" class="t-20 text-center c-black" textWrap="true"></Label>
 			<Button text="Test fingerprint-auth" (tap)="demoShared.doCheckAvailable()" class="btn btn-primary"></Button>
 			<Button text="Test Verify" (tap)="demoShared.doVerifyFingerprint()" class="btn btn-primary"></Button>
-			<Button text="Test Verify w/ PIN Fallback" (tap)="demoShared.doVerifyFingerprintWithCustomFallback()" class="btn btn-primary"></Button>
+			<Button text="Test Verify w/ PIN Fallback" (tap)="demoShared.doVerifyFingerprintWithPinFallBack()" class="btn btn-primary"></Button>
+			<Button text="Android Only Encrypt secret" (tap)="demoShared.doVerifyFingerprintWithEncrypt()" class="btn btn-primary"></Button>
+			<Button text="Android Only Decrypt secret" (tap)="demoShared.doVerifyFingerprintWithDecrypt()" class="btn btn-primary"></Button>
 		</StackLayout>
 	</ScrollView>
 </StackLayout>
